# ComfyUI_LFM2-350M

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
