[project]
name = "lfm2-350m"
description = "A custom node for ComfyUI to load and use the LFM2-350M model trained to work as a prompt enhancer for z-image turbo or any other long token model."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["transformers", "torch", "accelerate", "safetensors"]

[project.urls]
Repository = "https://github.com/marduk191/ComfyUI_LFM2-350M"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/marduk191/ComfyUI_LFM2-350M/wiki"
"Bug Tracker" = "https://github.com/marduk191/ComfyUI_LFM2-350M/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_LFM2-350M"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

